# pizza-maker

./: .env.template  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
deployments/dev/: docker-compose.yaml
deployments/dev/backend/: Dockerfile  entrypoint.sh
src/appname_snake_case/application/: register_user.py  view_user.py
src/appname_snake_case/application/ports/: user_data_signing.py  users.py
src/appname_snake_case/entities/core/: user.py
src/appname_snake_case/entrypoint/common/: di.py  uvicorn.py
src/appname_snake_case/entrypoint/web_service/: __main__.py  asgi.py  di.py
src/appname_snake_case/infrastructure/: envs.py  types.py
src/appname_snake_case/infrastructure/adapters/: user_data_signing.py  users.py
src/appname_snake_case/infrastructure/alembic/: env.py  script.py.mako
src/appname_snake_case/presentation/fastapi/: app.py  cookies.py  routers.py  schemas.py
src/pizza_maker/application/: create_pizza.py  on_account_created.py  publish_events.py
src/pizza_maker/application/dtos/: account_dto.py  crust_data_dto.py  crust_dto.py  ingredient_data_dto.py  ingredient_dto.py  sauce_dto.py
src/pizza_maker/application/ports/: clock.py  decoded_access_token.py  event_queue.py  map.py  pizzas.py  private_event_queue.py  public_event_queue.py  transaction.py  users.py
src/pizza_maker/entities/access/: access_token.py  account.py
src/pizza_maker/entities/common/: effect.py
src/pizza_maker/entities/core/: crust.py  ingredient.py  pizza.py  sauce.py  user.py
src/pizza_maker/entities/framework/: effect.py  identified.py
src/pizza_maker/entities/quantities/: grams.py  milliliters.py  millimeters.py
src/pizza_maker/entities/time/: time.py
src/pizza_maker/infrastructure/: in_memory_storage.py
tests/test_appname_snake_case/: conftest.py
tests/test_appname_snake_case/test_infrastructure/: conftest.py
tests/test_appname_snake_case/test_presentation/: conftest.py
tests/test_pizza_maker/: conftest.py
tests/test_pizza_maker/test_infrastructure/: conftest.py
tests/test_pizza_maker/test_presentation/: conftest.py
(+78 files in other folders)
